# sectors-api/src/main/java/com/helmes/sectorsapi/controller/ApplicationController.java
@@ -1,12 +1,13 @@
 package com.helmes.sectorsapi.controller;
 
 import com.helmes.sectorsapi.dto.ApplicationDTO;
+import com.helmes.sectorsapi.model.User;
 import com.helmes.sectorsapi.service.ApplicationService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -14,14 +15,14 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/api/v1/users/{userId}/applications")
+@RequestMapping("/api/v1/users/applications")
 public class ApplicationController {
 
     private final ApplicationService applicationService;
 
     @PostMapping
-    public ResponseEntity<Void> save(@PathVariable Long userId, @RequestBody @Valid ApplicationDTO applicationDTO) {
-        applicationService.saveApplication(userId, applicationDTO);
+    public ResponseEntity<Void> save(@AuthenticationPrincipal User user, @RequestBody @Valid ApplicationDTO applicationDTO) {
+        applicationService.saveApplication(user, applicationDTO);
 
         return ResponseEntity.status(HttpStatus.CREATED).build();
     }
