# sectors-api/src/main/java/com/helmes/sectorsapi/dto/UserDTO.java
@@ -1,12 +1,0 @@
-package com.helmes.sectorsapi.dto;
-
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
-
-public record UserDTO(
-    @NotNull(message = "Username cannot be null")
-    @NotBlank(message = "Username cannot be empty")
-    @Size(min = 5, max = 20)
-    String username
-) {}
