# sectors-api/src/main/java/com/helmes/sectorsapi/dto/UserRegisterDTO.java
@@ -1,0 +1,9 @@
+package com.helmes.sectorsapi.dto;
+
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+@Data
+@EqualsAndHashCode(callSuper = true)
+public class UserRegisterDTO extends UserAuthDTO {
+}
