# sectors-api/src/main/java/com/helmes/sectorsapi/model/User.java
@@ -32,6 +32,9 @@ public class User {
     @Column(nullable = false, unique = true)
     private String username;
 
+    @Column(nullable = false)
+    private String passwordHash;
+
     @Column(name = "created_at", nullable = false, updatable = false)
     private OffsetDateTime createdAt;
 
@@ -48,9 +51,10 @@ public class User {
         this.updatedAt = OffsetDateTime.now();
     }
 
-    public static User toEntity(String username) {
+    public static User toEntity(String username, String passwordHash) {
         return User.builder()
             .username(username)
+            .passwordHash(passwordHash)
             .build();
     }
 }
